# CardRead2

./: .gitignore  LICENSE  README.md  build_nuitka.bat  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: release.yml
src/: config.py
src/core/: __init__.py  base_chapter_parser.py  book_manager.py  chapter_parser.py  data_store.py  db_store.py  reading_engine.py  search_index.py
src/models/: __init__.py  book.py  bookmark.py  reading_progress.py
src/parsers/: __init__.py  base_parser.py  epub_parser.py  md_parser.py  mobi_parser.py  parser_factory.py  registry.py  txt_parser.py
src/themes/: __init__.py  theme_manager.py  theme_styles.py
src/utils/: __init__.py  decorators.py  encoding.py  file_utils.py  lru_cache.py  text_parser.py
src/web/: __init__.py  api.py  api_books.py  api_helpers.py  api_notes.py  api_reader.py  api_themes.py  api_windows.py  main.py
src/web/static/: common.css  common.js  elegant.css  elegant.html  elegant.js  flow.css  flow.html  flow.js  gallery.css  gallery.html  gallery.js  index.html  nautical.css  nautical.html  nautical.js  notes_editor.css  notes_editor.html  notes_editor.js  notes_viewer.css  notes_viewer.html  notes_viewer.js  reader.css  reader.html  reader.js  utils.js  vinyl.css  vinyl.html  vinyl.js  virtual-scroll.js
tests/: __init__.py  conftest.py  test_chapter_parsers.py  test_data_store.py  test_encoding.py  test_lru_cache.py  test_reading_engine.py  test_search_index.py  test_text_parser.py
